[package]
name = "grafton-server"
version = "0.1.0"
authors = ["Grant Sparks <grant@grafton.ai>"]
edition = "2021"
description = "grafton-server is an Axum-based webserver that provides a flexible and highly configurable platform for building web applications."
license = "Apache-2.0"
repository = "https://github.com/GrantSparks/grafton"
homepage = "https://www.grafton.ai"
categories = ["network-programming", "web-programming"]
keywords = ["api", "web", "http", "server", "networking"]
publish = false
readme = "README.md"
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "build.rs",
    "examples/**/*",
    "benches/**/*",
    "tests/**/*",
    "src/**/*",
]

[dependencies]
askama_axum = "*"
axum-login = "*"
derivative = "2"
grafton-config = "*"
rustls-pemfile = "2"
rustls-pki-types = "1"
serde_json = "1"
thiserror = "1"
tokio-rustls = "*"
tracing = "*"
tracing-appender = "*"
tracing-subscriber = "*"
url = "2"

[dependencies.axum]
version = "*"
features = ["macros", "json"]

[dependencies.hyper]
version = "1"
features = ["http1", "http2", "server"]

[dependencies.hyper-util]
version = "*"
features = ["tokio", "server-auto"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.strum]
version = ">=0.26.1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["signal", "rt-multi-thread"]

[dependencies.tower]
version = "*"
features = ["util"]

[dependencies.tower-http]
version = "*"
features = ["fs"]

[dev-dependencies]
criterion = "*"

[[bench]]
name = "benchmark"
harness = false
